# base_idea

./: README.md
backend/python_project/: .env  README.md  app.py  pyproject.toml  requirements.txt
backend/python_project/api/config/: database.py  db_initializer.py
backend/python_project/api/model/: category.py
backend/python_project/api/repository/: category_repository.py
backend/python_project/api/routes/: category_router.py
backend/python_project/api/utils/: logger.py  spec.py
backend/python_project/db_file/: categories.csv
backend/python_project/tests/: test_categories.py
frontend/angular_project/: README.md  angular.json  package-lock.json  package.json
frontend/angular_project/src/: index.html  styles.css
frontend/angular_project/src/app/: app.component.html  app.component.spec.ts  app.module.ts
frontend/angular_project/src/app/category-list/: category-list.component.css  category-list.component.html  category-list.component.spec.ts  category-list.component.ts
template/: contato.html  index.html  pet.html  pets.html
